[gd_scene load_steps=8 format=3 uid="uid://co3afijj5piwx"]

[ext_resource type="PackedScene" uid="uid://uqsy5yydpvo3" path="res://Niveau/GUI/GUI_actions.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://ddlveqhdpfnly" path="res://assets/FT88-Regular.ttf" id="2_fnrhm"]
[ext_resource type="Script" path="res://Niveau/GUI/GUI.gd" id="3"]

[sub_resource type="Theme" id="15"]
default_font = ExtResource("2_fnrhm")

[sub_resource type="Theme" id="Theme_8y4km"]

[sub_resource type="GDScript" id="13"]

[sub_resource type="ShaderMaterial" id="14"]
script = SubResource("13")

[node name="GUI" type="Node2D"]
z_index = 10
script = ExtResource("3")

[node name="outGameGUI" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.219
offset_right = 384.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("15")

[node name="win" type="Label" parent="outGameGUI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 146.0
offset_top = 42.0
offset_right = 244.0
offset_bottom = 67.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "BRAVO !"

[node name="HBoxContainer_gauche" type="HBoxContainer" parent="outGameGUI"]
layout_mode = 0
anchor_left = -1.0
anchor_bottom = 1.0
offset_left = -7.0

[node name="VBoxContainer" type="VBoxContainer" parent="outGameGUI/HBoxContainer_gauche"]
layout_mode = 2
size_flags_horizontal = 3

[node name="char_name" type="Label" parent="outGameGUI/HBoxContainer_gauche/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Personnage"

[node name="narrative" type="Label" parent="outGameGUI/HBoxContainer_gauche/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "bla bla"

[node name="nom_ennemi" type="Label" parent="outGameGUI/HBoxContainer_gauche/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Méchants !"

[node name="HBoxContainer_droit" type="HBoxContainer" parent="outGameGUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.5
anchor_bottom = 1.0
offset_right = 266.0

[node name="VBoxContainer" type="VBoxContainer" parent="outGameGUI/HBoxContainer_droit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextDroite" type="RichTextLabel" parent="outGameGUI/HBoxContainer_droit/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_8y4km")
bbcode_enabled = true
text = "il·elle peut :"
fit_content_height = true

[node name="ActionsContainer" type="VBoxContainer" parent="outGameGUI/HBoxContainer_droit/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GUI_action" parent="outGameGUI/HBoxContainer_droit/VBoxContainer/ActionsContainer" instance=ExtResource("2")]
material = SubResource("14")
layout_mode = 2

[node name="TextDroite2" type="RichTextLabel" parent="outGameGUI/HBoxContainer_droit/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
bbcode_enabled = true
text = "c'est parti !"
fit_content_height = true

[node name="VBoxContainer_meta" type="VBoxContainer" parent="outGameGUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.167
offset_top = -50.0
offset_right = 1.87199
offset_bottom = -34.0

[node name="meta" type="Label" parent="outGameGUI/VBoxContainer_meta"]
unique_name_in_owner = true
layout_mode = 2
text = "test"

[node name="VBoxContainer_esc" type="VBoxContainer" parent="outGameGUI"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 668.545
offset_top = 50.0
offset_right = 1004.54
offset_bottom = 55.0
grow_horizontal = 0
alignment = 2

[node name="esc" type="Label" parent="outGameGUI/VBoxContainer_esc"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "ESC pour revenir au menu"
